# DESTimes

./: .gitignore  BRITime.hpp  BRIValue.hpp  CMakeLists.txt  NDTime.hpp  README  README.md
include/: EIRational.hpp  NDTime.hpp
test/: ndtime_test.cpp
tests/: Makefile  constructors_test.cpp  ndtime_test.cpp
